[package]
name = "elevators"
version = "0.1.0"
authors = ["Ian Philip Eglin <philip@eglin.no>"]
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
uhlc = "0.8.1"

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = ["v4"]
